--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,13 @@
 
     <groupId>me.ryanhamshire</groupId>
     <artifactId>GPFlags</artifactId>
-    <version>5.13.6.${build.number}</version>
+    <version>5.13.6</version>
 
     <properties>
-<!--        this is the real java version used for compilation-->
-<!--        the mc server must have a java version equal or higher than this-->
-<!--        the intelliJ project version is just used for linting-->
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- Specify Java version for the project -->
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!--This is used to show the build number for jenkins.-->
-        <!--suppress UnresolvedMavenProperty -->
-        <build.number>${env.BUILD_NUMBER}</build.number>
     </properties>
 
     <repositories>
@@ -29,7 +24,6 @@
             <id>CodeMC</id>
             <url>https://repo.codemc.org/repository/maven-public</url>
         </repository>
-        <!-- GriefPrevention Repo -->
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
@@ -39,17 +33,18 @@
             <url>https://repo.purpurmc.org/snapshots</url>
         </repository>
         <repository>
-            <!-- MythicMobs -->
-            <id>nexus</id>
-            <name>Lumine Releases</name>
-            <url>https://mvn.lumine.io/repository/maven-public/</url>
-        </repository>
-        <repository>
             <id>elitemobs-repo</id>
             <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </repository>
     </repositories>
+
     <dependencies>
+        <dependency>
+            <groupId>org.purpurmc.purpur</groupId>
+            <artifactId>purpur-api</artifactId>
+            <version>1.21.1-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>com.github.TechFortress</groupId>
             <artifactId>GriefPrevention</artifactId>
@@ -130,24 +125,9 @@
         </dependency>
     </dependencies>
 
-    <profiles>
-        <profile>
-            <id>server</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-jar-plugin</artifactId>
-                        <version>3.4.1</version>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
-
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
-        <finalName>${project.name}-${project.version}</finalName>
+        <finalName>${project.artifactId}-${project.version}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -161,13 +141,11 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.4.1</version>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
-                    <links>
-                        <link>https://hub.spigotmc.org/javadocs/spigot/</link>
-                        <link>http://shanebeestudios.tk/docs/plugins/GriefPrevention/</link>
-                    </links>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -188,14 +166,6 @@
                                     <shadedPattern>me.ryanhamshire.GPFlags.libs.kyori.adventure</shadedPattern>
                                 </relocation>
                                 <relocation>
-                                    <pattern>net.kyori.examination</pattern>
-                                    <shadedPattern>me.ryanhamshire.GPFlags.libs.kyori.examination</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>net.kyori.option</pattern>
-                                    <shadedPattern>me.ryanhamshire.GPFlags.libs.kyori.option</shadedPattern>
-                                </relocation>
-                                <relocation>
                                     <pattern>org.bstats</pattern>
                                     <shadedPattern>me.ryanhamshire.GPFlags.libs.bstats</shadedPattern>
                                 </relocation>
@@ -203,14 +173,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>9</source>
-                    <target>9</target>
-                </configuration>
             </plugin>
         </plugins>
     </build>
